chrome/browser/media/router/discovery/mdns/cast_media_sink_service_impl.cc
@@ -181,7 +181,11 @@ CastMediaSinkServiceImpl::CastMediaSinkServiceImpl(
   DETACH_FROM_SEQUENCE(sequence_checker_);
   DCHECK(cast_socket_service_);
   DCHECK(network_monitor_);
-  network_monitor_->AddObserver(this);
+  task_runner_->PostTask(
+      FROM_HERE,
+      base::BindOnce(
+          &CastMediaSinkServiceImpl::AddNetworkChangeObserverOnSequence,
+          AsWeakPtr()));
   cast_socket_service_->AddObserver(this);
 
   retry_params_ = RetryParams::GetFromFieldTrialParam();
@@ -338,19 +342,26 @@ void CastMediaSinkServiceImpl::OnMessage(
 
 void CastMediaSinkServiceImpl::OnNetworksChanged(
     const std::string& network_id) {
+  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
+  // Although DiscoveryNetworkMonitor guarantees this condition won't be true
+  // from its Observer interface, the callback from |AddNetworkChangeObserver|
+  // could cause this to happen.
+  if (network_id == current_network_id_) {
+    return;
+  }
   std::string last_network_id = current_network_id_;
   current_network_id_ = network_id;
   dial_sink_failure_count_.clear();
-  if (IsNetworkIdUnknownOrDisconnected(network_id)) {
-    if (!IsNetworkIdUnknownOrDisconnected(last_network_id)) {
-      // Collect current sinks even if OnFetchCompleted hasn't collected the
-      // latest sinks.
-      std::vector<MediaSinkInternal> current_sinks;
-      for (const auto& sink_it : current_sinks_map_) {
-        current_sinks.push_back(sink_it.second);
-      }
-      sink_cache_[last_network_id] = std::move(current_sinks);
+  if (!IsNetworkIdUnknownOrDisconnected(last_network_id)) {
+    // Collect current sinks even if OnFetchCompleted hasn't collected the
+    // latest sinks.
+    std::vector<MediaSinkInternal> current_sinks;
+    for (const auto& sink_it : current_sinks_map_) {
+      current_sinks.push_back(sink_it.second);
     }
+    sink_cache_[last_network_id] = std::move(current_sinks);
+  }
+  if (IsNetworkIdUnknownOrDisconnected(network_id)) {
     return;
   }
   auto cache_entry = sink_cache_.find(network_id);
@@ -575,6 +586,16 @@ void CastMediaSinkServiceImpl::AttemptConnection(
                   SinkSource::kConnectionRetry);
     }
   }
+}
+
+void CastMediaSinkServiceImpl::AddNetworkChangeObserverOnSequence() {
+  DCHECK_CALLED_ON_VALID_SEQUENCE(sequence_checker_);
+  // This call to |GetNetworkId| ensures that we get the current network ID at
+  // least once during startup in case |AddObserver| occurs after the first
+  // round of notifications has already been dispatched.
+  network_monitor_->GetNetworkId(base::BindOnce(
+      &CastMediaSinkServiceImpl::OnNetworksChanged, AsWeakPtr()));
+  network_monitor_->AddObserver(this);
 }
 
 CastMediaSinkServiceImpl::RetryParams::RetryParams()
